fix(context): читать модули по UNC через Absolute.path
Closes #4481

Co-authored-by: Cursor <cursoragent@cursor.com>